--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start":"node index.js",
+    "build":"cd client && npm run build"
+
   },
   "keywords": [],
   "author": "",
